--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.databricks</groupId>
+			<artifactId>spark-xml_2.11</artifactId>
+			<version>0.4.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_${scala.compat.version}</artifactId>
 			<version>${spark.version}</version>
