--- a/pom.xml
+++ b/pom.xml
@@ -91,11 +91,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.codehaus.janino</groupId>
-			<artifactId>commons-compiler</artifactId>
-			<version>3.0.8</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.codehaus.janino</groupId>-->
+			<!--<artifactId>commons-compiler</artifactId>-->
+			<!--<version>3.0.8</version>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
