--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -18,8 +18,8 @@
 # Set everything to be logged to the console
 log4j.rootCategory=WARN, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.target=System.out   \
-#如果是System.err则会Console输出是红色的，应该是定向到标准错误输出
+log4j.appender.console.target=System.out
+# 如果是System.err则会Console输出是红色的，应该是定向到标准错误输出
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
 
